--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.0.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
